<?xml version="1.0"?>
<package>
  <name>auv_msgs</name>
  <version>0.1.0</version>
	<description>
		The package contains the Catkinized subset of auv_msgs package developed by 
		Heriot-Watt University Ocean System Laboratory. For more details
		visit <url>http://code.google.com/p/hwu-osl-ros-pkg/</url>.
 	</description>
  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
