<?xml version="1.0"?>
<package>
  <name>ident_so</name>
  <version>0.5.0</version>
  <description>
      The ident_so package contains the identification library and
      identification nodes and action servers.
  </description>

  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/ident_so</url> -->
  <author email="dula.nad@gmail.com">Gyula Nagy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>navcon_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>snippets</build_depend>
  
  <run_depend>navcon_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
</package>