<?xml version="1.0"?>
<package>
  <name>labust_execution</name>
  <version>0.1.0</version>
	<description>
		The labust_execution package contains the Petri-Net execution controller and 
		other supervisory level applications.
	</description>

  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/labust_execution</url> -->
  <author email="dula.nad@gmail.com">Gyula Nagy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>navcon_msgs</build_depend>
  <build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>

  <run_depend>navcon_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
