<?xml version="1.0"?>
<package>
  <name>labust_uvapp</name>
  <version>0.0.59</version>
	<description>
		The package contains the general UV control and navigation applications.
		It contains the related ROS nodes for vehicle control, identification,
		navigation and simulation.
	</description>

  <maintainer email="dnad@todo.todo">Dula Nad</maintainer>
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/labust_uvapp</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="dula.nad@gmail.com">Dula Nad</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>labust_base</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>auv_msgs</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<!-- <build_depend>kdl_conversions</build_depend> -->
	<build_depend>tf</build_depend>
	<build_depend>snippets</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>labust_base</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>auv_msgs</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>tf</run_depend>
	<!-- <run_depend>kdl_conversions</run_depend> -->
	
</package>
