<?xml version="1.0"?>
<package>
  <name>labust_uwsim</name>
  <version>0.1.0</version>
	<description>
		The labust_uwsim package contains the UWSim related extensions and scenes. The 3D data can be
		downloaded by running the download_data.sh script in the scripts folder.
	</description>

	<maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/labust_uwsim</url> -->
  <author email="dula.nad@gmail.com">Gyula Nagy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
